wip(domaine+api): grille de prix par service
